fix layout spacing

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -2,6 +2,7 @@
   width: 100%;
   margin: 0;
   padding: 0;
+  max-width: 100vw;
   text-align: center;
 }
 
